[package]
name = "leak_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.7"

indextree = { git = "https://github.com/CharlieTrip/IndexTree" }

[profile.release]
opt-level = 3
strip = "debuginfo"


