[package]
name = "leak_solver"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.7"
rand = "0.8.4"
tree_jump = { git = "https://github.com/CharlieTrip/TreeJump" }
index_tree = { git = "https://github.com/CharlieTrip/IndexTree" }
rayon = "1.10.0"

[profile.release]
opt-level = 3
strip = "debuginfo"


